--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,5 @@ akka {
   loglevel = DEBUG
   logger-startup-timeout = 30s
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  log-dead-letters = on
 }
